@@ -50,6 +50,12 @@ button.</li>
 
 <br>
 
+<iframe title="YouTube video player" class="youtube-player" type="text/html" 
+width="640" height="390" src="http://www.youtube.com/embed/YaXgJHf9hvs"
+frameborder="0" allowFullScreen></iframe>
+<br>
+<br>
+
 mrViewer supports some paint operations to be used as grease pencil markers.
 With the paint tools instead of the area selection tool, you can draw, erase and add text to any movie or file sequence.  You can even share these drawings across a network connection to other clients of the mrViewer that acts as a server.<br>
 
