@@ -107,6 +107,19 @@ particularly
 well when reading a foreground image that is a file that changes on
 disk or when reading a virtual
 image, such as a mental ray render stub.
+
+
+<br>
+<br>
+<iframe title="YouTube video player" class="youtube-player" type="text/html" 
+width="640" height="390" src="http://www.youtube.com/embed/UG8m6ZxsNcA"
+frameborder="0" allowFullScreen></iframe>
+
+<br>
+
+<br>
+
+
 <h3><a name="Playing_Movies_as_an_EDL_Reel"></a>Playing
 Movies as an EDL Reel</h3>
 
