@@ -66,4 +66,14 @@ file.&nbsp; mrViewer loads equivalent named ACESClip metadata files if
 they are present.&nbsp; For example, for a frame called
 nature.%04d.exr, the clip file named ACESclip.nature.xml file would be
 loaded.&nbsp; Once the clip file is loaded you can press the <span style="font-weight: bold;">LUT </span>button in the main toolbar and wait for it to cook the transform (which should take a couple of seconds).<br>
+
+
+<br>
+
+<iframe title="YouTube video player" class="youtube-player" type="text/html" 
+width="640" height="390" src="http://www.youtube.com/embed/A2zMjjKaDRY"
+frameborder="0" allowFullScreen></iframe>
+
+<br>
+
 </body></html>
