@@ -2,6 +2,7 @@ v2.9.9   - Added stereo interlaced, interlaced columns and
 	   checkerboard.
 	 - Fixed color queries to support stereo interlaced and
 	   checkerboard.
+	 - Added youtube videos to documentation.
 
 v2.9.8   - Bug fixed OpenEXR reader for multipart image files that
 	   are not stereo images.  Previously the files would show
